Fix line endings and update files

--- a/.env
+++ b/.env
@@ -9,3 +9,7 @@ JWT_SECRET=Prerit@123
 EMAIL_USER=preritaggarwal66@gmail.com
 EMAIL_PASS=dqtl uhpc jhsg uhis
 
+RAZORPAY_SECRET=TxmreG6eZnfg3UAAznMucw4S
+RAZORPAY_KEY_ID=rzp_test_EJPws2xdPpXtLq
+
+AIzaSyCi2vSphS7kqKTbS6LTop4v1hzosf1mm_E
