--- a/package.json
+++ b/package.json
@@ -30,13 +30,19 @@
 
     "dotenv": "^16.4.5",
 
-    "express": "^4.19.2",
+    "express": "^4.21.0",
 
     "jsonwebtoken": "^9.0.2",
+
+    "multer": "^1.4.5-lts.1",
 
     "mysql2": "^3.11.2",
 
     "nodemailer": "^6.9.15",
+
+    "passport-google-oauth20": "^2.0.0",
+
+    "razorpay": "^2.9.4",
 
     "route": "^0.2.5",
 
