--- a/.env
+++ b/.env
@@ -1,15 +1,13 @@
 
 DB_HOST=localhost
 DB_USER=root
-DB_PASS=Damco123
-DB_NAME=mydatabase
+DB_PASS=ur pswd
+DB_NAME=ur db name
 DB_DIALECT=mysql
 PORT=5000
-JWT_SECRET=Prerit@123
-EMAIL_USER=preritaggarwal66@gmail.com
-EMAIL_PASS=dqtl uhpc jhsg uhis
+JWT_SECRET=ur key
+EMAIL_USER=ur email
+EMAIL_PASS=ur key
 
-RAZORPAY_SECRET=TxmreG6eZnfg3UAAznMucw4S
-RAZORPAY_KEY_ID=rzp_test_EJPws2xdPpXtLq
-
-AIzaSyCi2vSphS7kqKTbS6LTop4v1hzosf1mm_E
+RAZORPAY_SECRET=your key
+RAZORPAY_KEY_ID=your key
